# lcov-tool

./: Cargo.toml  README.md
src/: command.rs  coverage.rs  main.rs  parser.rs  processor.rs  report.rs
src/command/: coverage.rs  mod.rs
src/command/coverage/: mod.rs  parser.rs  processor.rs
tests/fixtures/: Makefile  fixture.c  fixture.info  func-unused.c  report.lcov
