[package]
name = "lcov-tool"
version = "0.1.0"
authors = [ "Noritaka Horio <holy.shared.design@gmail.com>" ]
license = "MIT/Apache-2.0"
repository = "https://github.com/holyshared/lcov-tool"
readme = "README.md"

[dependencies]
clap = "2.5.1"
lcov-parser = "1.1.1"

[[bin]]
name = "lcov-tool"
path = "src/main.rs"
