[package]
name = "lcov-tool"
version = "0.1.2"
description = "LCOV report of utility tool"
authors = [ "Noritaka Horio <holy.shared.design@gmail.com>" ]
license = "MIT/Apache-2.0"
repository = "https://github.com/holyshared/lcov-tool"
readme = "README.md"
homepage = "https://github.com/holyshared/lcov-tool"

[dependencies]
clap = "2.9.1"
lcov-parser = "1.1.1"

[[bin]]
name = "lcov-tool"
path = "src/main.rs"
