[package]
name = "lcov-tool"
version = "0.1.4"
description = "LCOV report of utility tool"
authors = [ "Noritaka Horio <holy.shared.design@gmail.com>" ]
license = "MIT/Apache-2.0"
repository = "https://github.com/holyshared/lcov-tool"
readme = "README.md"
homepage = "https://github.com/holyshared/lcov-tool"

[dependencies]
clap = "2.13.0"
lcov-parser = "2.0.0"

[[bin]]
name = "lcov-tool"
path = "src/main.rs"
